--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -3,9 +3,9 @@
 <h1>Albite - Test server</h1>
 Vector tile server mainly for portable device (prototype). <br>
 Repository URL: <a href="https://github.com/ubukawa/albite">https://github.com/ubukawa/albite</a><br><br>
-<img src="photos/unhq.jpg" alt="image photo"><br><br>
+<img src="figs/unhq.jpg" alt="image photo"><br><br>
 This is still a prototype server.<br>
-<i>Albite (NaAlSi3O8) is a common minearal. So, I named after this hoping that this server will also be a common tool for users. It is also important to note that Albite metamorphoses into other mineral in the different condision (e.g. at high pressure). </i><br><br>
+<i>Albite (NaAlSi3O8) is a common minearal. So, I named after this hoping12:04 PM 02/12/2022 that this server will also be a common tool for users. It is also important to note that Albite metamorphoses into other mineral in the different condision (e.g. at high pressure). </i><br><br>
 
 
 <h2>Functions</h2>
@@ -57,13 +57,16 @@ Try this: <a href="./rgb-elev/zxy/2/1/1.png">./rgb-elev/zxy/2/1/1.png</a>
  * Please confirm your mbtile is stored in mbtiles directory.<br>
 
 
-
-
 <h2>Sample maps</h2>
-You can check the sample maps. Please make sure that you replaced the location of the vector tile in their style files.<br>  
-map1: <a href="./maps/map-pbf.html">Sample map 1. source is from pbf</a><br>
-map2: <a href="./maps/map-mbtiles.html">Sample map 2. source is from mbtiles</a><br>
-map3: <a href="./maps/map-un.html">Sample map 3. Only for UN internal (need to add data source in mbtiles format.)</a><br>
+You can check the sample maps. Please make sure that you replaced the location of the vector tile in their style files.<br><br>
+- map1: <a href="./maps/map-pbf.html">Sample map 1. source is from pbf</a><br><br>
+- map2: <a href="./maps/map-mbtiles.html">Sample map 2. source is from mbtiles</a><br>
+<img src="figs/map2-example.jpg" alt="map2 sample image"><br><br>
+- map3: <a href="./maps/map-un.html">Sample map 3. Only for UN internal (need to add data source in mbtiles format.)</a><br>
+<img src="figs/map3-example.jpg" alt="map3 sample image">
+(map with 6-37-30 and 6-37-31 modules)<br><br><br>
+
+
 
 </body>
 </html>
