--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -5,7 +5,7 @@ Vector tile server mainly for portable device (prototype). <br>
 Repository URL: <a href="https://github.com/ubukawa/albite">https://github.com/ubukawa/albite</a><br><br>
 <img src="figs/unhq.jpg" alt="image photo"><br><br>
 This is still a prototype server.<br>
-<i>Albite (NaAlSi3O8) is a common minearal. So, I named after this hoping12:04 PM 02/12/2022 that this server will also be a common tool for users. It is also important to note that Albite metamorphoses into other mineral in the different condision (e.g. at high pressure). </i><br><br>
+<i>Albite (NaAlSi3O8) is a common mineral. So, I named after this hoping12:04 PM 02/12/2022 that this server will also be a common tool for users. It is also important to note that Albite metamorphoses into other mineral in the different condision (e.g. at high pressure). </i><br><br>
 
 
 <h2>Functions</h2>
