--- a/htdocs/maps/map-un.html
+++ b/htdocs/maps/map-un.html
@@ -35,6 +35,7 @@ var map = new maplibregl.Map({
 //UI
 map.addControl(new maplibregl.NavigationControl(), 'bottom-right');
 map.addControl(new maplibregl.ScaleControl() );
+map.addControl(new maplibregl.GeolocateControl({positionOptions: {enableHighAccuracy: true}, trackUserLocation: true}));
 
 
 //debug
